--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -72,6 +72,7 @@
             android:layout_below="@+id/tvMessageChangePass"
             android:layout_marginTop="@dimen/_15sdp"
             android:fillViewport="true"
+            android:fitsSystemWindows="true"
             android:scrollbars="none">
 
             <RelativeLayout
