--- a/app/src/main/res/layout/activity_account_type.xml
+++ b/app/src/main/res/layout/activity_account_type.xml
@@ -82,6 +82,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/businessAccontLL"
             android:layout_width="match_parent"
             android:layout_height="180dp"
             android:layout_marginStart="@dimen/_10sdp"
