--- a/app/src/main/res/layout/activity_customer_profile.xml
+++ b/app/src/main/res/layout/activity_customer_profile.xml
@@ -611,6 +611,7 @@
                             android:layout_gravity="center">
 
                             <TextView
+                                android:id="@+id/tvBMSetting"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginEnd="170dp"
