--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -163,6 +163,7 @@
                         android:layout_height="wrap_content"
                         android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%^*()_+={}[]|\;:,.?/"
                         android:fontFamily="@font/opensans_semibold"
+                        android:gravity="center_vertical"
                         android:hint="************"
                         android:imeOptions="actionDone"
                         android:inputType="textPassword|textNoSuggestions"
@@ -184,6 +185,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_centerInParent="true"
+                    android:layout_marginTop="@dimen/_14sdp"
                     android:layout_marginRight="@dimen/_10sdp"
                     android:src="@drawable/ic_faceid"
                     android:visibility="gone" />
