--- a/app/src/main/res/layout/activity_edit_phone.xml
+++ b/app/src/main/res/layout/activity_edit_phone.xml
@@ -28,7 +28,8 @@
             <LinearLayout
                 android:id="@+id/editPhoneCloseLL"
                 android:layout_width="@dimen/_30sdp"
-                android:layout_height="@dimen/_30sdp">
+                android:layout_height="wrap_content">
+
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -49,7 +50,7 @@
                 android:id="@+id/currentPhoneET"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_14sdp" />
+                android:layout_marginTop="@dimen/_32sdp" />
 
             <LinearLayout
                 android:id="@+id/currentPhoneErrorLL"
