--- a/app/src/main/res/layout/activity_edit_email.xml
+++ b/app/src/main/res/layout/activity_edit_email.xml
@@ -28,7 +28,8 @@
             <LinearLayout
                 android:id="@+id/editEmailCloseLL"
                 android:layout_width="@dimen/_30sdp"
-                android:layout_height="@dimen/_30sdp">
+                android:layout_height="wrap_content">
+
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -50,7 +51,7 @@
                 style="@style/TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_40sdp"
+                android:layout_marginTop="@dimen/_32sdp"
                 android:hint="Current Email"
                 android:textColorHint="@color/black"
                 app:boxStrokeColor="@color/primary_green"
@@ -62,7 +63,11 @@
                     android:id="@+id/currentEmailET"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:clickable="false"
+                    android:cursorVisible="false"
                     android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@+-,_."
+                    android:editable="false"
+                    android:focusable="false"
                     android:fontFamily="@font/opensans_semibold"
                     android:hint="Current Email"
                     android:imeOptions="actionNext"
@@ -74,10 +79,7 @@
                     android:textColor="@color/text_color"
                     android:textColorHint="@color/light_gray"
                     android:textCursorDrawable="@drawable/cursor_color"
-                    android:textSize="@dimen/_12ssp"
-                    android:editable="false"
-                    android:focusable="false"
-                    android:clickable="false"/>
+                    android:textSize="@dimen/_12ssp" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -210,4 +212,5 @@
             android:textColor="@color/white"
             android:textSize="@dimen/_12ssp" />
     </androidx.cardview.widget.CardView>
+
 </RelativeLayout>
