--- a/app/src/main/res/layout/fragment_two.xml
+++ b/app/src/main/res/layout/fragment_two.xml
@@ -48,8 +48,8 @@
                 android:gravity="center">
 
                 <androidx.cardview.widget.CardView
-                    android:layout_width="@dimen/text_size_7sp"
-                    android:layout_height="@dimen/text_size_7sp"
+                    android:layout_width="@dimen/_6sdp"
+                    android:layout_height="@dimen/_6sdp"
                     app:cardBackgroundColor="@color/primary_color"
                     app:cardCornerRadius="5dp" />
 
@@ -57,7 +57,7 @@
                     android:id="@+id/oneTV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="15dp"
+                    android:layout_marginStart="@dimen/_12sdp"
                     android:fontFamily="@font/opensans_regular"
                     android:textColor="@color/primary_black"
                     android:textSize="@dimen/text_size_12sp"
@@ -73,7 +73,8 @@
                 android:textSize="@dimen/text_size_12sp"
                 android:text="sdsd"
                 android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginBottom="@dimen/_10sdp"/>
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:layout_marginStart="@dimen/_18sdp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -82,8 +83,8 @@
                 android:layout_marginBottom="@dimen/_10sdp">
 
                 <androidx.cardview.widget.CardView
-                    android:layout_width="@dimen/text_size_7sp"
-                    android:layout_height="@dimen/text_size_7sp"
+                    android:layout_width="@dimen/_6sdp"
+                    android:layout_height="@dimen/_6sdp"
                     app:cardBackgroundColor="@color/primary_color"
                     app:cardCornerRadius="5dp" />
 
@@ -91,7 +92,7 @@
                     android:id="@+id/twoTV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="15dp"
+                    android:layout_marginStart="@dimen/_12sdp"
                     android:fontFamily="@font/opensans_regular"
                     android:textColor="@color/primary_black"
                     android:textSize="@dimen/text_size_12sp"
@@ -105,8 +106,8 @@
                 android:gravity="center">
 
                 <androidx.cardview.widget.CardView
-                    android:layout_width="@dimen/text_size_7sp"
-                    android:layout_height="@dimen/text_size_7sp"
+                    android:layout_width="@dimen/_6sdp"
+                    android:layout_height="@dimen/_6sdp"
                     app:cardBackgroundColor="@color/primary_color"
                     app:cardCornerRadius="5dp" />
 
@@ -114,7 +115,7 @@
                     android:id="@+id/threeTV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="15dp"
+                    android:layout_marginStart="@dimen/_12sdp"
                     android:fontFamily="@font/opensans_regular"
                     android:textColor="@color/primary_black"
                     android:textSize="@dimen/text_size_12sp"
@@ -129,7 +130,8 @@
                 android:textSize="@dimen/text_size_12sp"
                 android:text=""
                 android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginBottom="@dimen/_10sdp"/>
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:layout_marginStart="@dimen/_18sdp"/>
 
         </LinearLayout>
 
