--- a/app/src/main/res/layout/fragment_three.xml
+++ b/app/src/main/res/layout/fragment_three.xml
@@ -46,12 +46,12 @@
                 android:layout_marginTop="30dp">
 
                 <androidx.cardview.widget.CardView
-                    android:layout_width="@dimen/text_size_7sp"
-                    android:layout_height="@dimen/text_size_7sp"
+                    android:layout_width="@dimen/_6sdp"
+                    android:layout_height="@dimen/_6sdp"
                     app:cardBackgroundColor="@color/primary_color"
                     app:cardCornerRadius="5dp" />
                 <TextView
-                    android:layout_marginStart="15dp"
+                    android:layout_marginStart="@dimen/_12sdp"
                     android:id="@+id/oneTV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -67,12 +67,12 @@
                 android:gravity="center"
                 android:layout_marginTop="@dimen/_10sdp">
                 <androidx.cardview.widget.CardView
-                    android:layout_width="@dimen/text_size_7sp"
-                    android:layout_height="@dimen/text_size_7sp"
+                    android:layout_width="@dimen/_6sdp"
+                    android:layout_height="@dimen/_6sdp"
                     app:cardBackgroundColor="@color/primary_color"
                     app:cardCornerRadius="5dp" />
                 <TextView
-                    android:layout_marginStart="15dp"
+                    android:layout_marginStart="@dimen/_12sdp"
                     android:id="@+id/twoTV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -88,12 +88,12 @@
                 android:gravity="center"
                 android:layout_marginTop="@dimen/_10sdp">
                 <androidx.cardview.widget.CardView
-                    android:layout_width="@dimen/text_size_7sp"
-                    android:layout_height="@dimen/text_size_7sp"
+                    android:layout_width="@dimen/_6sdp"
+                    android:layout_height="@dimen/_6sdp"
                     app:cardBackgroundColor="@color/primary_color"
                     app:cardCornerRadius="5dp" />
                 <TextView
-                    android:layout_marginStart="15dp"
+                    android:layout_marginStart="@dimen/_12sdp"
                     android:id="@+id/threeTV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
