--- a/app/src/main/res/layout/activity_account_limits.xml
+++ b/app/src/main/res/layout/activity_account_limits.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#f2f4f5"
     android:orientation="vertical"
     tools:context=".view.AccountLimitsActivity">
 
@@ -12,23 +13,29 @@
         android:layout_height="wrap_content"
         android:background="@drawable/card_bottomradius"
         android:orientation="vertical"
-        android:paddingBottom="@dimen/_12sdp">
+        android:paddingBottom="@dimen/_11sdp">
 
-        <ImageView
+        <LinearLayout
             android:id="@+id/alBackbtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_21sdp"
             android:layout_marginTop="@dimen/_45sdp"
+            android:layout_marginStart="@dimen/_21sdp"
+            android:orientation="horizontal">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="@dimen/_10sdp"
             android:src="@drawable/ic_back" />
+        </LinearLayout>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_21sdp"
             android:layout_marginTop="@dimen/_14sdp"
             android:fontFamily="@font/opensans_bold"
             android:text="@string/account_limits"
+            android:layout_marginStart="@dimen/_21sdp"
             android:textColor="@color/black"
             android:textSize="@dimen/_16ssp" />
 
@@ -43,7 +50,81 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:paddingBottom="@dimen/_40sdp"
             android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_21sdp"
+                android:orientation="horizontal"
+                android:paddingLeft="@dimen/_21sdp">
+
+                <ImageView
+                    android:layout_width="@dimen/_30ssp"
+                    android:layout_height="@dimen/_25sdp"
+                    android:src="@drawable/ic_send_icon" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="6dp"
+                    android:fontFamily="@font/opensans_semibold"
+                    android:gravity="center"
+                    android:text="Pay/Request"
+                    android:textColor="@color/primary_black"
+                    android:textSize="@dimen/_12ssp" />
+            </LinearLayout>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_11sdp"
+                android:layout_marginTop="@dimen/_11sdp"
+                android:layout_marginEnd="@dimen/_11sdp"
+                app:cardBackgroundColor="@color/white"
+                app:cardCornerRadius="@dimen/_10sdp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:paddingBottom="@dimen/_11sdp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_11sdp"
+                        android:gravity="center"
+                        android:orientation="horizontal"
+                        android:paddingTop="@dimen/_8sdp"
+                        android:paddingBottom="@dimen/_10sdp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/_11sdp"
+                            android:fontFamily="@font/opensans_regular"
+                            android:gravity="left"
+                            android:text="Pay/Request"
+                            android:textColor="#767676"
+                            android:textSize="@dimen/_11ssp" />
+
+                        <TextView
+                            android:id="@+id/tvPayRequestTransactionLimit"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/opensans_semibold"
+                            android:gravity="right"
+                            android:paddingEnd="@dimen/_11sdp"
+                            android:textColor="@color/primary_black"
+                            android:textSize="@dimen/_11ssp" />
+
+
+                    </LinearLayout>
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -53,8 +134,8 @@
                 android:paddingLeft="@dimen/_21sdp">
 
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="@dimen/_24sdp"
+                    android:layout_height="@dimen/_24sdp"
                     android:src="@drawable/ic_buy_tokenicon" />
 
                 <TextView
@@ -81,7 +162,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:paddingTop="@dimen/_11sdp"
                     android:paddingBottom="@dimen/_11sdp">
 
                     <LinearLayout
@@ -107,7 +187,7 @@
                             android:id="@+id/tvBuyTokenBankLimit"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/opensans_regular"
+                            android:fontFamily="@font/opensans_semibold"
                             android:gravity="right"
                             android:paddingEnd="@dimen/_11sdp"
                             android:textColor="@color/primary_black"
@@ -138,7 +218,7 @@
                             android:id="@+id/tvBuyTokenDebitLimit"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/opensans_regular"
+                            android:fontFamily="@font/opensans_semibold"
                             android:gravity="right"
                             android:paddingEnd="@dimen/_11sdp"
                             android:textColor="@color/primary_black"
@@ -169,7 +249,7 @@
                             android:id="@+id/tvBuyTokenCreditLimit"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/opensans_regular"
+                            android:fontFamily="@font/opensans_semibold"
                             android:gravity="end"
                             android:paddingEnd="@dimen/_11sdp"
                             android:textColor="@color/primary_black"
@@ -189,8 +269,8 @@
                 android:paddingStart="@dimen/_21sdp">
 
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="@dimen/_22sdp"
+                    android:layout_height="@dimen/_21sdp"
                     android:src="@drawable/ic_withdraw_tokenicon" />
 
                 <TextView
@@ -220,7 +300,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:paddingTop="@dimen/_11sdp"
 
                     >
 
@@ -247,7 +326,7 @@
                             android:id="@+id/tvWithTokenBankLimit"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/opensans_regular"
+                            android:fontFamily="@font/opensans_semibold"
                             android:gravity="right"
                             android:paddingEnd="@dimen/_11sdp"
                             android:textColor="@color/primary_black"
@@ -278,7 +357,7 @@
                             android:id="@+id/tvWithTokenInstantLimit"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/opensans_regular"
+                            android:fontFamily="@font/opensans_semibold"
                             android:gravity="right"
                             android:paddingEnd="@dimen/_11sdp"
                             android:textColor="@color/primary_black"
@@ -310,7 +389,7 @@
                             android:id="@+id/tvWithdrawTokenGiftCardLimit"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/opensans_regular"
+                            android:fontFamily="@font/opensans_semibold"
                             android:gravity="right"
                             android:paddingEnd="@dimen/_11sdp"
                             android:textColor="@color/primary_black"
