--- a/app/src/main/res/layout/activity_customer_profile.xml
+++ b/app/src/main/res/layout/activity_customer_profile.xml
@@ -75,9 +75,9 @@
                                         android:id="@+id/profileCredLL"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
+                                        android:layout_alignParentStart="true"
                                         android:layout_alignParentTop="true"
                                         android:layout_marginTop="@dimen/_11sdp"
-                                        android:layout_alignParentStart="true"
                                         android:layout_toStartOf="@+id/profilePicCL"
                                         android:orientation="vertical"
                                         android:paddingLeft="@dimen/_21sdp"
@@ -117,12 +117,10 @@
                                                 android:fontFamily="@font/opensans_semibold"
                                                 android:text="@string/status_unverified"
                                                 android:textColor="@color/primary_black"
-                                                android:textSize="@dimen/_11ssp"
-
-                                                />
+                                                android:textSize="@dimen/_11ssp" />
 
                                             <TextView
-                                                android:id="@+id/cpStatusTV"
+                                                android:id="@+id/tvACStatus"
                                                 android:layout_width="wrap_content"
                                                 android:layout_height="wrap_content"
                                                 android:layout_marginStart="5dp"
@@ -148,9 +146,8 @@
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:layout_alignParentRight="true"
-                                        android:layout_marginEnd="@dimen/_30ssp"
                                         android:layout_marginTop="@dimen/_15sdp"
-                                        >
+                                        android:layout_marginEnd="@dimen/_30ssp">
 
                                         <androidx.constraintlayout.widget.ConstraintLayout
                                             android:id="@+id/linearLayout"
@@ -616,6 +613,7 @@
                             android:layout_gravity="center">
 
                             <TextView
+                                android:id="@+id/tvBMSetting"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginEnd="170dp"
