--- a/app/src/main/res/layout/activity_pay_request_scan.xml
+++ b/app/src/main/res/layout/activity_pay_request_scan.xml
@@ -6,10 +6,10 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     tools:context=".view.PayRequestScanActivity">
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
 
         <com.budiyev.android.codescanner.CodeScannerView
             android:id="@+id/scanner_view"
@@ -28,73 +28,75 @@
             app:frameSize="0.45"
             app:frameThickness="5dp"
             app:maskColor="#2CFDFBFB" />
+
         <ImageView
             android:id="@+id/closeBtnSC"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_closewhite"
-            android:visibility="visible"
-            android:layout_marginTop="@dimen/_45sdp"
             android:layout_marginStart="@dimen/_21sdp"
-            />
+            android:layout_marginTop="@dimen/_45sdp"
+            android:src="@drawable/ic_closewhite"
+            android:visibility="visible" />
+
         <LinearLayout
             android:id="@+id/layoutHead"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:visibility="gone"
             android:background="@drawable/bottomradius"
+            android:orientation="vertical"
             android:paddingLeft="@dimen/_21sdp"
-            android:paddingBottom="@dimen/_25sdp">
+            android:paddingBottom="@dimen/_25sdp"
+            android:visibility="gone">
 
             <ImageView
                 android:id="@+id/imgCloseSM"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_45sdp"
-                android:src="@drawable/ic_close"/>
+                android:src="@drawable/ic_close" />
         </LinearLayout>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/viewSideBarCV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="@dimen/_19sdp"
-            android:layout_marginTop="@dimen/_80sdp"
             android:layout_marginStart="@dimen/_21sdp"
+            android:layout_marginTop="@dimen/_80sdp"
             android:layout_marginEnd="@dimen/_21sdp"
-            app:cardBackgroundColor="@color/white">
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="@dimen/_19sdp">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
+
                 <TextView
                     android:id="@+id/scanCodeTV"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Scan Code"
                     android:layout_weight="1"
+                    android:background="@drawable/bg_core_colorfill"
+                    android:fontFamily="@font/opensans_bold"
                     android:paddingTop="@dimen/_11sdp"
                     android:paddingBottom="@dimen/_11sdp"
+                    android:text="Scan Code"
                     android:textAlignment="center"
-                    android:fontFamily="@font/opensans_bold"
                     android:textColor="@color/white"
-                    android:background="@drawable/bg_core_colorfill"
-                    android:textSize="@dimen/_11ssp"
-                    />
+                    android:textSize="@dimen/_11ssp" />
+
                 <TextView
                     android:id="@+id/scanMeTV"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Scan Me"
-                    android:textAlignment="center"
                     android:layout_weight="1"
+                    android:fontFamily="@font/opensans_bold"
                     android:paddingTop="@dimen/_11sdp"
                     android:paddingBottom="@dimen/_11sdp"
-                    android:fontFamily="@font/opensans_bold"
+                    android:text="Scan Me"
+                    android:textAlignment="center"
                     android:textColor="@color/primary_black"
-                    android:textSize="@dimen/_11ssp"
-                    />
+                    android:textSize="@dimen/_11ssp" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
@@ -104,62 +106,60 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:visibility="visible">
+
             <LinearLayout
                 android:layout_width="0dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                >
+                android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/toglebtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_50sdp"
-                android:layout_marginTop="550sp"
-                android:text="Flash ON"
-                android:src="@drawable/ic_flashicon"
-                />
+                <ImageView
+                    android:id="@+id/toglebtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_50sdp"
+                    android:layout_marginTop="550sp"
+                    android:src="@drawable/ic_flashicon"
+                    android:text="Flash ON" />
 
-             <TextView
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:text="Flashlight"
-                 android:fontFamily="@font/opensans_regular"
-                 android:textSize="@dimen/_12ssp"
-                 android:layout_marginTop="@dimen/_10sdp"
-                 android:layout_marginStart="@dimen/_40sdp"
-                 android:textColor="@color/white"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_40sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:fontFamily="@font/opensans_regular"
+                    android:text="Flashlight"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_12ssp"
 
-                 />
+                    />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                >
+                android:layout_weight="1"
+                android:orientation="vertical">
+
                 <ImageView
                     android:id="@+id/album"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_50sdp"
                     android:layout_marginTop="550sp"
-                    android:src="@drawable/ic_group_albumicon"
-                    />
+                    android:src="@drawable/ic_group_albumicon" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Album"
-                    android:fontFamily="@font/opensans_regular"
-                    android:textSize="@dimen/_12ssp"
-                    android:layout_marginTop="@dimen/_10sdp"
                     android:layout_marginStart="@dimen/_52sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:fontFamily="@font/opensans_regular"
+                    android:text="Album"
                     android:textColor="@color/white"
+                    android:textSize="@dimen/_12ssp"
 
                     />
-
 
 
             </LinearLayout>
@@ -170,15 +170,15 @@
             android:id="@+id/scannerLayout"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_200sdp"
-            android:visibility="visible"
             android:layout_centerInParent="true"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="visible">
 
             <View
                 android:id="@+id/lineView"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_55sdp"
-                android:background="@drawable/scananim11"/>
+                android:background="@drawable/scananim11" />
 
 
         </LinearLayout>
@@ -189,8 +189,8 @@
             android:layout_height="match_parent"
             android:layout_below="@id/viewSideBarCV"
             android:fillViewport="true"
-            android:visibility="gone"
-            android:scrollbars="none">
+            android:scrollbars="none"
+            android:visibility="gone">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -213,8 +213,8 @@
                             android:id="@+id/cvProfile"
                             android:layout_width="@dimen/_40ssp"
                             android:layout_height="@dimen/_40ssp"
-                            android:layout_marginTop="@dimen/_14sdp"
                             android:layout_centerHorizontal="true"
+                            android:layout_marginTop="@dimen/_14sdp"
                             app:cardBackgroundColor="@color/white"
                             app:cardCornerRadius="@dimen/_20sdp">
 
@@ -230,7 +230,7 @@
                                     android:fontFamily="@font/opensans_semibold"
                                     android:text=""
                                     android:textColor="@color/primary_black"
-                                    android:textSize="@dimen/text_size_20sp"/>
+                                    android:textSize="@dimen/text_size_20sp" />
 
                                 <androidx.cardview.widget.CardView
                                     android:id="@+id/cvProfilePic"
@@ -245,7 +245,7 @@
                                         android:layout_width="match_parent"
                                         android:layout_height="match_parent"
                                         android:scaleType="centerCrop"
-                                        android:visibility="visible"/>
+                                        android:visibility="visible" />
                                 </androidx.cardview.widget.CardView>
                             </RelativeLayout>
                         </androidx.cardview.widget.CardView>
@@ -259,7 +259,7 @@
                             android:fontFamily="@font/opensans_semibold"
                             android:text="Jonathan Joestar"
                             android:textColor="@color/primary_black"
-                            android:textSize="@dimen/_14ssp"/>
+                            android:textSize="@dimen/_14ssp" />
 
                         <RelativeLayout
                             android:id="@+id/qrViewRL"
@@ -274,41 +274,42 @@
                                 android:id="@+id/idIVQrcode"
                                 android:layout_width="@dimen/_145sdp"
                                 android:layout_height="@dimen/_145sdp"
-                                android:src="@drawable/qr"
                                 android:layout_centerInParent="true"
-                                android:contentDescription="@string/qr_code" />
+                                android:contentDescription="@string/qr_code"
+                                android:src="@drawable/qr" />
                         </RelativeLayout>
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/_32sdp"
                             android:layout_below="@id/qrViewRL"
+                            android:layout_marginTop="@dimen/_32sdp"
                             android:orientation="horizontal">
+
                             <RelativeLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content">
+
                                 <TextView
                                     android:id="@+id/scanMesetAmountTV"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="Set Amount"
-                                    android:fontFamily="@font/opensans_semibold"
-                                    android:textSize="@dimen/_12ssp"
-                                    android:layout_marginStart="@dimen/_20sdp"
                                     android:layout_alignParentStart="true"
+                                    android:layout_marginStart="@dimen/_20sdp"
+                                    android:fontFamily="@font/opensans_semibold"
+                                    android:text="Set Amount"
                                     android:textColor="@color/primary_green"
-                                    />
+                                    android:textSize="@dimen/_12ssp" />
 
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="Save to Album"
                                     android:layout_alignParentRight="true"
-                                    android:textColor="@color/primary_green"
-                                    android:textSize="@dimen/_12ssp"
                                     android:layout_marginEnd="@dimen/_20sdp"
                                     android:fontFamily="@font/opensans_semibold"
-                                    />
+                                    android:text="Save to Album"
+                                    android:textColor="@color/primary_green"
+                                    android:textSize="@dimen/_12ssp" />
                             </RelativeLayout>
                         </LinearLayout>
 
@@ -338,7 +339,7 @@
                             android:fontFamily="@font/opensans_regular"
                             android:text="Recipient’s Address"
                             android:textColor="@color/xdark_gray"
-                            android:textSize="@dimen/_11ssp"/>
+                            android:textSize="@dimen/_11ssp" />
 
                         <TextView
                             android:id="@+id/tvWalletAddress"
@@ -348,7 +349,7 @@
                             android:fontFamily="@font/opensans_semibold"
                             android:text="f4184fc596403b9d6…"
                             android:textColor="#404040"
-                            android:textSize="@dimen/_10ssp"/>
+                            android:textSize="@dimen/_10ssp" />
 
                         <View
                             android:id="@+id/divider"
@@ -356,7 +357,7 @@
                             android:layout_height="1dp"
                             android:layout_below="@+id/tvWalletAddress"
                             android:layout_marginTop="@dimen/_20sdp"
-                            android:background="@color/at_gray"/>
+                            android:background="@color/at_gray" />
 
                         <RelativeLayout
                             android:layout_width="match_parent"
@@ -370,7 +371,7 @@
                                 android:id="@+id/imgCopy"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:src="@drawable/ic_copy"/>
+                                android:src="@drawable/ic_copy" />
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -379,14 +380,14 @@
                                 android:fontFamily="@font/opensans_semibold"
                                 android:text="Copy"
                                 android:textColor="@color/primary_black"
-                                android:textSize="@dimen/_11ssp"/>
+                                android:textSize="@dimen/_11ssp" />
 
                             <ImageView
                                 android:id="@+id/imgShare"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentRight="true"
-                                android:src="@drawable/ic_share"/>
+                                android:src="@drawable/ic_share" />
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -397,7 +398,7 @@
                                 android:text="Share"
 
                                 android:textColor="@color/primary_black"
-                                android:textSize="@dimen/_11ssp"/>
+                                android:textSize="@dimen/_11ssp" />
                         </RelativeLayout>
                     </RelativeLayout>
                 </androidx.cardview.widget.CardView>
