Reset PIN, Face/Touch ID settings

--- a/app/src/main/res/layout/activity_confirm_password.xml
+++ b/app/src/main/res/layout/activity_confirm_password.xml
@@ -89,7 +89,7 @@
             android:textSize="@dimen/_12ssp"
             android:longClickable="false"
             android:maxLength="12"
-            android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%^*()_+={}[]|\;:,.?/"
+            android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%*?"
             android:maxLines="1" />
 
     </com.google.android.material.textfield.TextInputLayout>
