--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -114,7 +114,7 @@
                             android:textColorHint="@color/light_gray"
                             android:textCursorDrawable="@drawable/cursor_color"
                             android:textSize="@dimen/_12ssp"
-                            android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%^*()_+={}[]|\;:,.?/&amp;"/>
+                            android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%*?"/>
 
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -129,7 +129,7 @@
                         <View
                             android:id="@+id/strengthOne"
                             android:layout_width="match_parent"
-                            android:layout_height="2dp"
+                            android:layout_height="3dp"
                             android:layout_marginStart="10dp"
                             android:layout_marginEnd="10dp"
                             android:layout_weight="1"
@@ -138,7 +138,7 @@
                         <View
                             android:id="@+id/strengthTwo"
                             android:layout_width="match_parent"
-                            android:layout_height="2dp"
+                            android:layout_height="3dp"
                             android:layout_marginEnd="10dp"
                             android:layout_weight="1"
                             android:background="@color/error_red"
@@ -147,7 +147,7 @@
                         <View
                             android:id="@+id/strengthThree"
                             android:layout_width="match_parent"
-                            android:layout_height="2dp"
+                            android:layout_height="3dp"
                             android:layout_marginEnd="10dp"
                             android:layout_weight="1"
                             android:background="@color/error_red"
@@ -192,7 +192,7 @@
                         android:id="@+id/etCPassword"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%^*()_+={}[]|\;:,.?/&amp;"
+                        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%*?"
                         android:fontFamily="@font/opensans_semibold"
                         android:hint="@string/confirm_password"
                         android:imeOptions="actionDone"
