--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -30,7 +30,7 @@
     <color name="toast_icon">#ebffd0</color>
     <color name="default_red">#FFDD2C00</color>
     <color name="price">#009c98</color>
-    <color name="orange">#e67e22</color>
+    <color name="orange">#FFA70F</color>
 
 
 </resources>
