--- a/app/src/main/res/layout/enable_disable_face_touch_dialog.xml
+++ b/app/src/main/res/layout/enable_disable_face_touch_dialog.xml
@@ -25,34 +25,66 @@
 
     </LinearLayout>
 
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/timezonesRV"
+    <TextView
+        android:id="@+id/tvHead"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_20sdp"/>
+        android:layout_marginTop="40dp"
+        android:fontFamily="@font/opensans_bold"
+        android:text="@string/set_up_face_id"
+        android:textColor="@color/black"
+        android:textSize="@dimen/_16ssp"
+        android:visibility="visible" />
+
+    <TextView
+        android:id="@+id/tvMessage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_16sdp"
+        android:fontFamily="@font/opensans_semibold"
+        android:text="@string/enable_face_message"
+        android:textColor="@color/primary_black"
+        android:textSize="@dimen/_12ssp" />
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cvAction"
+        android:id="@+id/enableCV"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_44sdp"
+        android:layout_height="@dimen/_43sdp"
         android:layout_marginTop="@dimen/_40sdp"
         app:cardBackgroundColor="@color/primary_green"
         app:cardCornerRadius="@dimen/_22sdp">
 
         <TextView
-            android:id="@+id/tvAction"
+            android:id="@+id/tvEnable"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:fontFamily="@font/opensans_bold"
-            android:text="Done"
+            android:text="@string/set_up_face_id"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="@dimen/_12ssp" />
     </androidx.cardview.widget.CardView>
 
+    <LinearLayout
+        android:id="@+id/notNowLL"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_43sdp"
+        android:layout_marginTop="@dimen/_16sdp"
+        android:background="@drawable/shape_green_round_rect_core"
+        android:gravity="center"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/opensans_bold"
+            android:gravity="center"
+            android:text="Not Now"
+            android:textColor="@color/primary_color"
+            android:textSize="@dimen/_12ssp" />
+    </LinearLayout>
+
     <View
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_28sdp" />
+        android:layout_height="@dimen/_27sdp" />
 </LinearLayout>
